tester/src/test/aya/failure/confl-cond.aya.txt
In file $FILE:6:3 ->

  4 | \open \data Int : \Set
  5 |  | pos Nat
  6 |  | neg Nat {
         ^-^
  
Error: The 1st and the 2nd clauses are not confluent because we failed to unify `pos (suc zero)` and `pos zero`
Tycking interrupted due to errors.
What are you doing?
